--- a/AspDotNetCoreLesson/AspDotNetCoreLesson.csproj
+++ b/AspDotNetCoreLesson/AspDotNetCoreLesson.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
+		<StartupObject>AspDotNetCoreLesson.Program</StartupObject>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7"/>
