Upgrade project to .Net 8; Upgrade packages; refactor code

--- a/AspDotNetCoreLesson/appsettings.json
+++ b/AspDotNetCoreLesson/appsettings.json
@@ -8,6 +8,6 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"AspDotNetCoreLesson": "Data Source=.\\SQLEXPRESS;Initial Catalog=AspDotNetCoreLesson;Integrated Security=True"
+		"AspDotNetCoreLesson": "Data Source=.\\SQLEXPRESS;Initial Catalog=AspDotNetCoreLesson;Integrated Security=True;TrustServerCertificate=True"
 	}
 }
